k8s/apache-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
spec:
  ingressClassName: nginx
  rules:
  - host: apache.sandbox.<domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
  tls:
  - hosts:
    - apache.sandbox.<domain>
    secretName: apache.sandbox.<domain>
